<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.hfad.mytimetracker.TaskCreatorFragment">

        <!-- TODO: Update blank fragment layout -->
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:orientation="horizontal"
                tools:context=".GridXMLActivity" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_cat"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_rtask"
                    android:visibility="invisible"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_name"
                    />

                <EditText
                    android:id="@+id/cat_name"
                    android:layout_width="284dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_color"/>

                <TextView
                    android:id="@+id/colorbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Color You Chose"/>

                <Button
                    android:id="@+id/submit_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="submit"
                    />
            </GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <GridLayout
                android:id="@+id/GridLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="3"
                tools:context=".GridXMLActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_task"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_rtask"
                    android:visibility="invisible"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_cat" />

                <EditText
                    android:id="@+id/cat_name_task_adder"
                    android:layout_width="284dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_task" />

                <EditText
                    android:id="@+id/task_name_task_adder"
                    android:layout_width="203dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/start_time_taskadder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_time" />

                <EditText
                    android:layout_width="242dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/end_time_taskadder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/add_task_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/submit_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="submit" />
            </GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:orientation="horizontal"
                tools:context=".GridXMLActivity" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_rtask"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_rtask"
                    android:visibility="invisible"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_cat"
                    />

                <EditText
                    android:layout_width="284dp"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_task"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/start_time_reocc_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_time"
                    android:clickable="true"
                    />

                <EditText
                    android:layout_width="284dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/end_time_reocc_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    />

                <EditText
                    android:layout_width="284dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    />

                <EditText
                    android:layout_width="284dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/submit_reocc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="submit"
                    />
            </GridLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>